# ranger_net

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
src/: App.tsx  main.rs  prog.rs
src/prog/: component.rs  resource.rs  system.rs
src/prog/component/: bullet.rs  camera.rs  player.rs  weapons.rs
src/prog/resource/: assets.rs  game_state.rs
src/prog/system/: battle.rs  inputs.rs  matchbox.rs
src/prog/system/battle/: local.rs  player.rs  sim.rs
src/prog/system/battle/sim/: fire_bullets.rs  move_players.rs
