[package]
name = "ranger_net"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.optimized]
inherits = "dev"
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
debug = false
# panic = "abort" # See if any libraries rely on stack unwinding
# TODO: Look at enabling the flag that allows using newer CPU features - though breaking some backward compatibility


[dependencies]
bevy = { version = "0.14.2", features = [] }
bevy_ggrs = { version = "0.16", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.10", features = ["ggrs"] }
# Disables bevy's logging, disable when need to debug
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_roll_safe = "0.3.0"


